[fix] (ABC-1487): Prevent progress bar from creating useless scrollbar

--- a/src/modules/base/progressBar/progressBar.css
+++ b/src/modules/base/progressBar/progressBar.css
@@ -1,5 +1,9 @@
 @import './shared.css';
 
+.avonni-progress-bar__bar {
+    height: initial;
+}
+
 .avonni-progress-bar__value_bottom-left {
     position: absolute;
     z-index: 1;
